cambios terminados a todo el proyecto 3.0

--- a/src/main/webapp/pages/admin/bussinesentitytype/bussinesentitytype.xhtml
+++ b/src/main/webapp/pages/admin/bussinesentitytype/bussinesentitytype.xhtml
@@ -176,7 +176,7 @@ limitations under the License.
 
                         #{' '}
                         <h:link outcome="/pages/admin/bussinesentitytype/list.xhtml?faces-redirect=true"                                                                                                                                                        
-                                value="#{messages['common.cancel']}" styleClass="btn" immediate="true"/>                         
+                                value="#{messages['common.cancel']}" styleClass="btn"/>                         
                     </div>                     
                     <p:dataTable var="property" value="#{e.properties}" style="width:100%" 
                                  editable="false" 
