--- a/src/main/webapp/pages/admin/bussinesentitytype/list.xhtml
+++ b/src/main/webapp/pages/admin/bussinesentitytype/list.xhtml
@@ -63,8 +63,8 @@ limitations under the License.
             <p:dataTable var="bussinesEntityType" value="#{bussinesEntityTypeListService}"
                          paginator="true" rows="15"                         
                          paginatorPosition="top"
-                         paginatorTemplate="{CurrentPageReport} {PreviousPageLink} {NextPageLink} {RowsPerPageDropdown} {FirstPageLink} {LastPageLink}"
-                         rowsPerPageTemplate="5,10,15"
+                         paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
+                         rowsPerPageTemplate="5,10,15,20"
                          id="bussinesEntityTypeTable" lazy="true"                          
                          selection="#{bussinesEntityTypeListService.selectedBussinesEntityType}"
                          rendered="true"
