--- a/src/main/webapp/pages/admin/frequency/frequency.xhtml
+++ b/src/main/webapp/pages/admin/frequency/frequency.xhtml
@@ -78,7 +78,7 @@ limitations under the License.
                                      update="form-dialog-confirm-delete" rendered="#{frequencyHome.instance.id != null}"/>
 
                     <h:link outcome="/pages/admin/frequency/list.xhtml?faces-redirect=true" onclick="editDlg.hide();"
-                            value="#{messages['common.cancel']}" styleClass="btn" immediate="true">                         
+                            value="#{messages['common.cancel']}" styleClass="btn">                         
                     </h:link>
                 </div>
             </h:form>
