--- a/src/main/webapp/pages/admin/setting/setting.xhtml
+++ b/src/main/webapp/pages/admin/setting/setting.xhtml
@@ -42,7 +42,7 @@
                                      update="form-dialog-confirm-delete" rendered="#{settingHome.instance.id != null}"/>
 
                     <h:link outcome="/pages/admin/setting/list.xhtml?faces-redirect=true" onclick="editDlg.hide();"
-                            value="#{messages['common.cancel']}" styleClass="btn" immediate="true">                         
+                            value="#{messages['common.cancel']}" styleClass="btn" >                         
                     </h:link>
                 </div>
 
