--- a/src/main/webapp/pages/admin/security/group.xhtml
+++ b/src/main/webapp/pages/admin/security/group.xhtml
@@ -35,7 +35,7 @@
                     <h:commandButton id="save" action="#{securityGroupHome.saveGroup}" value="#{messages['common.save']}" styleClass="btn primary"/>
                    
                     <h:link outcome="/pages/admin/security/list.xhtml?faces-redirect=true" onclick="editDlg.hide();"
-                            value="#{messages['common.cancel']}" styleClass="btn" immediate="true">                         
+                            value="#{messages['common.cancel']}" styleClass="btn" >
                     </h:link>
                 </div>               
             </h:form>                 
