--- a/src/main/webapp/pages/depSalud/fichaMedica.xhtml
+++ b/src/main/webapp/pages/depSalud/fichaMedica.xhtml
@@ -17,7 +17,6 @@
             <f:viewParam name="pacienteId" value="#{fichaMedicaHome.pacienteId}" />
             <f:viewParam name="fichaMedicaId" value="#{fichaMedicaHome.fichaMedicaId}" />
             <f:viewParam name="backView" value="#{fichaMedicaHome.backView}" />
-
         </f:metadata>
 
         <ui:define name="header-replace" > <!--rendered="#{identity.loggedIn and account.renderView}"-->
@@ -45,13 +44,36 @@
                             });
                         </script>
                         <h:inputText id="buscar" value="#{fichaMedicaHome.parametroBusqueda}" styleClass="span5" required="true" label="" >                                                                                
-                            <f:ajax execute="@this" render="buscarp" />                                
+                            <p:ajax process="@this" update=":form" listener="#{fichaMedicaHome.buscarPorParametro()}"/>   
                         </h:inputText>                                                                   
-                        <p:commandLink id="cargarPaciente" action="#{fichaMedicaHome.buscarPorParametro()}" ajax="true"
+                        <p:commandLink id="cargarPaciente" 
                                        title="Buscar Paciente"  styleClass="btn primary" style="height: 16px;">
                             <p:graphicImage value="#{resource['/images/buscar.png']}" style="margin-top: -2px;"/>
-                            <p:ajax process="@this" update=":form:infoP :form:infoFM" rendered=":form:infoP :form:infoFM" />
-                        </p:commandLink>                       
+                            <p:ajax process="@this" update=":form:infoP :form:infoFM :form:carPanel:tablaPacient" 
+                                    rendered=":form:infoP :form:infoFM"  listener="#{fichaMedicaHome.buscarPorParametro()}"/>
+                        </p:commandLink>
+                        <p:overlayPanel id="carPanel" for="cargarPaciente" hideEffect="fade" dynamic="true">
+                            <p:dataTable id="tablaPacient" value="#{fichaMedicaHome.listaPacietes}" var="paciente_">
+                                <p:column headerText="#{messages['profile.dni']}">
+                                    <h:outputText value="#{paciente_.cedula}" />
+                                </p:column >
+                                <p:column headerText="#{messages['common.surname']}">
+                                    <h:outputText value="#{paciente_.apellidos}" />
+                                </p:column >
+                                <p:column headerText="#{messages['common.firstname']}">
+                                    <h:outputText value="#{paciente_.nombres}" />
+                                </p:column >                                
+                                <p:column headerText="#{messages['common.edad']}">
+                                    <h:outputText value="#{paciente_.edad}" />
+                                </p:column >
+                                <p:column headerText="Opcion">
+                                    <h:link id="cargarPaciente" outcome="/pages/depSalud/fichaMedica.xhtml?faces-redirect=true" 
+                                            title="cargar"  styleClass="btn primary" value="cargar">                                        
+                                        <f:param name="pacienteId" value="#{paciente_.id}"></f:param>                                
+                                    </h:link>
+                                </p:column >
+                            </p:dataTable>
+                        </p:overlayPanel>  
                     </h:panelGrid>
                 </div>
                 <p:panel id="infoP" header="Información Personal" styleClass="clearfix">
@@ -231,15 +253,43 @@
                     </c:forEach>
                 </p:tabView>
 
-                <p:panel id="signosVitalesP" header="#{'TOMA DE SIGNOS VITALES'}" toggleable="true" styleClass="span16" toggleSpeed="100" closeSpeed="0" 
+                <p:panel id="signosVitalesP" header="#{messages['signosVitales.toma']} #{messages['signosVitales.Nombre']}" toggleable="true" styleClass="span16" toggleSpeed="100" closeSpeed="0" 
                          rendered="#{fichaMedicaHome.instance.persistent and account.tienePermiso('ENFERMEROS') }">
-                    <h:link value="#{'Nueva Consulta '} " rendered="#{true}" outcome="/pages/depSalud/enfermeria/signosVitales" 
+                    <h:link value="#{messages['common.new1']} #{messages['comun.consulta']}" rendered="#{true}" outcome="/pages/depSalud/enfermeria/signosVitales" 
                             styleClass="btn success Large">
                         <h:graphicImage value="#{resource['images/sv2.png']}" style="float: left;" />
                         <f:param name="fichaMedicaId" value="#{fichaMedicaHome.instance.id}"></f:param>                                
                         <f:param name="backView" value="fichaMedica"></f:param>
                     </h:link>
+                    <br/>    
+                    <p:dataTable id="tablaSigVit" value="#{fichaMedicaHome.listaSignosVitales}" var="signosVit_" >
 
+                        <p:column headerText="#{messages['consultaMedica.fechaConsulta']}" style="width: 15%">
+                            <p:outputLabel value="#{signosVit_.fechaActual}" >
+                                <f:convertDateTime pattern="dd-MMM-yyyy"/>
+                            </p:outputLabel>
+                        </p:column>
+                        <p:column headerText="#{messages['signosVitales.presionArt']}" style="width: 30%">
+                            <h:outputText value="#{signosVit_.presionArterialSistolica}" />&nbsp;&nbsp;
+                            <h:outputText value="#{signosVit_.presionArterialDiastolica}" />
+                        </p:column>
+                        <p:column headerText="#{messages['signosVitales.pulso']}" style="width: 20%">
+                            <h:outputText value="#{signosVit_.pulso}" />                                                          
+                        </p:column>
+                        <p:column headerText="#{messages['signosVitales.talla']}" style="width: 20%">
+                            <h:outputText value="#{signosVit_.talla}" />                                                          
+                        </p:column>
+                        <p:column headerText="#{messages['signosVitales.temperatura']}" style="width: 20%">
+                            <h:outputText value="#{signosVit_.temperatura}" />                                                          
+                        </p:column>
+                        <p:column headerText="#{'Opción'}" style="width: 20%">
+                            <h:link value="#{messages['common.edit']}" outcome="/pages/depSalud/enfermeria/signosVitales" >                                
+                                <f:param name="fichaMedicaId" value="#{fichaMedicaHome.instance.id}"></f:param>                                
+                                <f:param name="signosVitalesId" value="#{signosVit_.id}"></f:param>
+                                <f:param name="backView" value="fichaMedica"></f:param>
+                            </h:link>
+                        </p:column>
+                    </p:dataTable>
                 </p:panel>
                 <!--Evolucion o consultas medicas-->
                 <p:panel id="consultasM" header="#{'CONSULTAS MÉDICAS'}" toggleable="true" styleClass="span16" toggleSpeed="100" closeSpeed="0" 
@@ -248,27 +298,11 @@
                         <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="/pages/depSalud/medicina/consultaMedica" styleClass="btn success" >
                             <f:param name="fichaMedicaId" value="#{fichaMedicaHome.instance.id}"></f:param>                                
                             <f:param name="backView" value="fichaMedica"></f:param>
-                        </h:link>
-                        #{' '}
-                        <h:link id="button-edit" value="#{messages['common.edit']}" rendered="#{true}" outcome="/pages/depSalud/medicina/consultaMedica" styleClass="btn success"
-                                disabled="#{fichaMedicaHome.consultaMedica == null}" >
-                            <f:param name="fichaMedicaId" value="#{fichaMedicaHome.instance.id}"></f:param>
-                            <f:param name="consultaMedicaId" value="#{fichaMedicaHome.consultaMedica.id}"></f:param>
-                            <f:param name="backView" value="fichaMedica"></f:param>
-                        </h:link>
-                        #{' '}
-                        <p:commandButton id="button-delete" type="button" value="#{messages['common.delete']}" styleClass="btn success" onclick="#{'deletedDlg.show()'}"  immediate="true"
-                                         update=":cancel-dialog" disabled="#{fichaMedicaHome.consultaMedica == null}">                        
-                        </p:commandButton>
+                        </h:link>                        
                     </div> 
-                    <p:dataTable id="tablaConsultasM" value="#{fichaMedicaHome.listaConsultasM}" rows="10" var="consultaM_" editable="true"
+                    <p:dataTable id="tablaConsultasM" value="#{fichaMedicaHome.historiaClinica.consultas}" rows="10" var="consultaM_" editable="true"
                                  selection="#{fichaMedicaHome.consultaMedica}" selectionMode="single" rowKey="#{consultaM_.id}" 
-                                 paginator="true">                           
-                        <p:ajax event="rowSelect" listener="#{fichaMedicaHome.onRowSelect}"   
-                                update=":form:button-edit :form:button-delete :form:growl"/>  
-                        <p:ajax event="rowUnselect" listener="#{fichaMedicaHome.onRowUnselect}" 
-                                update=":form:button-edit :form:button-delete :form:growl" />
-
+                                 paginator="true">                                                   
                         <p:column headerText="Id" style="width: 7%">
                             <h:outputText value="#{consultaM_.id}"/>
                         </p:column>                            
@@ -282,11 +316,26 @@
                         <p:column headerText="#{messages['consultaMedica.motivo']}" style="width: 30%">
                             <h:outputText value="#{consultaM_.motivoConsulta}" />
                         </p:column>
-                        <p:column headerText="#{messages['consultaMedica.Tratamiento']}" style="width: 30%">
+                        <p:column headerText="#{messages['consultaMedica.Tratamiento']}" style="width: 29%">
                             <h:outputText value="#{consultaM_.tratamiento}" />
                         </p:column>
                         <p:column headerText="#{messages['comun.estado']}"  style="width: 10%">
                             <h:outputText value="#{consultaM_.code}" title="Estado de la consulta puede ser (PENDIENTE o REALIZADA)" escape="false"/>
+                        </p:column>
+                        <p:column headerText="#{'Opcines'}" style="width: 20%">
+                            <h:link id="button-edit" rendered="#{true}" outcome="/pages/depSalud/medicina/consultaMedica" title="#{messages['common.edit']}" 
+                                    styleClass="btn success" style="width: 10px; height: 10px; float: left; margin-left: -5px;">
+                                <p:graphicImage value="/resources/images/Icon_edit.gif" width="10" height="10"/>
+                                <f:param name="fichaMedicaId" value="#{fichaMedicaHome.instance.id}"></f:param>
+                                <f:param name="consultaMedicaId" value="#{consultaM_.id}"></f:param>
+                                <f:param name="backView" value="fichaMedica"></f:param>
+                            </h:link>
+                            <p:commandButton id="button-delete" type="button" title="#{messages['common.delete']}" 
+                                             onclick="#{'deletedDlg.show()'}"  immediate="true" styleClass="btn success" 
+                                             icon="ui-icon-trash" style="width: 40px; height: 23px;">                        
+                                <f:setPropertyActionListener value="#{consultaM_}" target="#{fichaMedicaHome.consultaMedica}"/>
+                                <p:ajax process="@this" update=":cancel-dialog" />
+                            </p:commandButton>
                         </p:column>
                     </p:dataTable>
                 </p:panel>
@@ -307,7 +356,7 @@
                         </h:link>
 
                     </div> 
-                    <p:dataTable id="tablaConsultasO" value="#{fichaMedicaHome.listaConsultasO}" rows="10" var="consultaO_" editable="true"
+                    <p:dataTable id="tablaConsultasO" value="#{fichaMedicaHome.fichaOdontologica.consultas}" rows="10" var="consultaO_" editable="true"
                                  selection="#{fichaMedicaHome.consultaOdont}" selectionMode="single" rowKey="#{consultaO_.id}"
                                  paginator="true">                           
                         <p:ajax event="rowSelect" listener="#{fichaMedicaHome.onRowSelect1}"   
