--- a/src/main/webapp/pages/depSalud/listaFichaMedica.html
+++ b/src/main/webapp/pages/depSalud/listaFichaMedica.html
@@ -8,7 +8,7 @@
                 xmlns:fn="http://java.sun.com/jsp/jstl/functions"
                 template="/WEB-INF/view/templates/glue.xhtml">
 
-    <ui:param name="titulo" value="#{messages['consultaMedica.admin']}"/>
+    <ui:param name="titulo" value="#{messages['fichaMedica.admin']}"/>
 
     <ui:define name="header-replace">
         <div class="header-replace">            
@@ -34,8 +34,8 @@
     <ui:define name="content">
         <!--Metadato que se realiza antes de renderizarse la vista-->
         <f:metadata>
-            <f:viewParam name="result" value="#{consultaMedicaListaServicio.firstResult}" />            
-            <f:viewParam name="" value="#{consultaMedicaListaServicio.parametroBusqueda}"/>
+            <f:viewParam name="result" value="#{fichaMedicaListaServicio.firstResult}" />            
+            <f:viewParam name="" value="#{fichaMedicaListaServicio.parametroBusqueda}"/>
         </f:metadata>
         <!--Formulario dentro de un contenedor-->
         <h:form id="form">            
@@ -45,80 +45,81 @@
             <!--Botones de admin-->
             <div class="admin-actions span17">
                 <div class="span6 ">
-                    <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="consultaMedica" styleClass="btn success">
-                        <f:param name="consultaMedicaId"></f:param>
+                    <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="fichaMedica" styleClass="btn success">
+                        <f:param name="fichaMedicaId"></f:param>
                         <f:param name="backView" value="lista"></f:param>
                     </h:link>
                     #{' '}
-                    <h:link id="button-edit" value="#{messages['common.edit']}" rendered="#{true}" outcome="consultaMedica" styleClass="btn" 
-                            disabled="#{empty consultaMedicaListaServicio.consulMedicSeleccionada}">
-                        <f:param name="consultaMedicaId" value="#{consultaMedicaListaServicio.consulMedicSeleccionada.id}"></f:param>
+                    <h:link id="button-edit" value="#{messages['common.edit']}" rendered="#{true}" outcome="fichaMedica" styleClass="btn" 
+                            disabled="#{empty fichaMedicaListaServicio.fichaMedicSeleccionada }">
+                        <f:param name="fichaMedicaId" value="#{fichaMedicaListaServicio.fichaMedicSeleccionada.id}"></f:param>
                         <f:param name="backView" value="lista"></f:param>
                     </h:link>
                     #{' '}
-                    <h:link id="button-abrirFM" value="#{messages['fichaMedica.abrir']}" rendered="#{true}" outcome="/pages/depSalud/medicina/consultaMedica" styleClass="btn" 
-                            disabled="#{empty consultaMedicaListaServicio.consulMedicSeleccionada}">
-                        <f:param name="consultaMedicaId" value="#{consultaMedicaListaServicio.consulMedicSeleccionada.id}"></f:param>
+                    <h:link id="button-abrirFM" value="#{messages['fichaMedica.abrir']}" rendered="#{true}" outcome="/pages/depSalud/fichaMedica" styleClass="btn" 
+                            disabled="#{empty fichaMedicaListaServicio.fichaMedicSeleccionada}">
+                        <f:param name="fichaMedicaId" value="#{fichaMedicaListaServicio.fichaMedicSeleccionada.id}"></f:param>
                         <f:param name="backView" value="lista"></f:param>
                     </h:link>
                 </div>
                 <div class="span6 offset5" >
-                    <p:inputText id="criterioBuscar" size ="25" value="#{consultaMedicaListaServicio.parametroBusqueda}" title="Ingrese un criterio de busqueda">
-                        <p:ajax event="keyup" update="tablaConsultasMedicas"/>
+                    <p:inputText id="criterioBuscar" size ="25" value="#{fichaMedicaListaServicio.parametroBusqueda}" title="Ingrese un criterio de busqueda">
+                        <p:ajax event="keyup" update="tablaFichasMedicas"/>
                     </p:inputText>
                     &nbsp;
-                                   
+                    <p:commandButton value="Buscar" action="#{fichaMedicaListaServicio.buscarPorParametro()}" update="tablaFichasMedicas" styleClass="btn info"/>                    
                     <br/>
                 </div>             
             </div>
 
             <!--tabla de datos-->
-            <p:dataTable id="tablaConsultasMedicas"  var="consultaMedica_" value="#{consultaMedicaListaServicio.resultList}"
+            <p:dataTable id="tablaFichasMedicas"  var="fichaMedica_" value="#{fichaMedicaListaServicio.resultList}"
                          paginator="true" rows="10" styleClass="span18"
                          paginatorPosition="top"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
                          rowsPerPageTemplate="10,20,30,50,100"
                          lazy="true"
-                         rowKey="#{consultaMedica_.id}"
-                         selection="#{consultaMedicaListaServicio.consulMedicSeleccionada}"
+                         rowKey="#{fichaMedica_.id}"
+                         selection="#{fichaMedicaListaServicio.fichaMedicSeleccionada;
+}"
                          rendered="true"
                          selectionMode="single">
-                <!--Acciones Ajax, que me permiten seleccionar y desseleccionar una Consulta Medica-->
-                <p:ajax event="rowSelect" listener="#{consultaMedicaListaServicio.onRowSelect}"   
+                <!--Acciones Ajax, que me permiten seleccionar y desseleccionar una Ficha Medica-->
+                <p:ajax event="rowSelect" listener="#{fichaMedicaListaServicio.onRowSelect}"   
                         update=":form:button-edit :form:messages :form:button-abrirFM"/>                 
-                <p:ajax event="rowUnselect" listener="#{consultaMedicaListaServicio.onRowUnselect}" 
+                <p:ajax event="rowUnselect" listener="#{fichaMedicaListaServicio.onRowUnselect}" 
                         update=":form:button-edit :form:messages :form:button-abrirFM"/>
 
                 <!--Columnas para mostrar en la tabla-->
-                <p:column sortBy="#{consultaMedica_.id}" style="width: 15%; text-align: center;">
+                <p:column sortBy="#{fichaMedica_.id}" style="width: 15%; text-align: center;">
                     <f:facet name="header">  
-                        <h:outputText value="#{messages['consultaMedica.id']}" />  
+                        <h:outputText value="#{messages['fichaMedica.id']}" />  
                     </f:facet> 
-                    <h:outputText value="#{consultaMedica_.id}" />
+                    <h:outputText value="#{fichaMedica_.id}" />
                 </p:column>
-                <p:column sortBy="#{consultaMedica_.nombres}" style="text-align: center;">
+                <p:column sortBy="#{fichaMedica_.nombres}" style="text-align: center;">
                     <f:facet name="header">  
                         <h:outputText value="#{messages['common.firstname']}" />  
                     </f:facet> 
-                    <h:outputText value="#{consultaMedica_.nombres}" />
+                    <h:outputText value="#{fichaMedica_.nombres}" />
                 </p:column>
-                <p:column sortBy="#{consultaMedica_.apellidos}" style="text-align: center;">
+                <p:column sortBy="#{fichaMedica_.apellidos}" style="text-align: center;">
                     <f:facet name="header">  
                         <h:outputText value="#{messages['common.surname']}" />  
                     </f:facet> 
-                    <h:outputText value="#{consultaMedica_.apellidos}" />
+                    <h:outputText value="#{fichaMedica_.apellidos}" />
                 </p:column>
-                <p:column sortBy="#{consultaMedica_.fechaConsulta}" style="text-align: center;">
+                <p:column sortBy="#{fichaMedica_.fechaApertura}" style="text-align: center;">
                     <f:facet name="header">  
-                        <h:outputText value="#{messages['consultaMedica.fechaConsulta']}" />  
+                        <h:outputText value="#{messages['fichaMedica.fechaApertura']}" />  
                     </f:facet> 
-                    <h:outputText value="#{consultaMedica_.fechaConsulta}" />
+                    <h:outputText value="#{fichaMedica_.fechaApertura}" />
                 </p:column>
-                <p:column sortBy="#{consultaMedica_.responsable}" style="text-align: center;">
+                <p:column sortBy="#{fichaMedica_.fechaActualizacion}" style="text-align: center;">
                     <f:facet name="header">  
-                        <h:outputText value="#{messages['consultaMedica.medicoResponsable']}" />  
+                        <h:outputText value="#{messages['fichaMedica.ultimaActualización']}" />  
                     </f:facet> 
-                    <h:outputText value="#{consultaMedica_.responsable}" />
+                    <h:outputText value="#{fichaMedica_.fechaActualizacion}" />
                 </p:column>
             </p:dataTable>
         </h:form>
